# src/main/resources/oas/openapi.yaml
@@ -7,22 +7,22 @@ info:
     name: MIT License
     url: 'https://opensource.org/licenses/MIT'
 paths:
-  /books:
+  /shelves:
     post:
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/requestBookCreation'
+              $ref: '#/components/schemas/requestShelfCreation'
         required: true
       tags:
-        - book
+        - shelf
       responses:
         '201':
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/bookCreated'
+                $ref: '#/components/schemas/shelfCreated'
           description: Book created
         '401':
           $ref: '#/components/responses/res-401'
@@ -32,16 +32,16 @@ paths:
           $ref: '#/components/responses/res-422'
         '500':
           $ref: '#/components/responses/res-500'
-      operationId: create-book
-      summary: It creates a new book
-  '/books/{id}':
+      operationId: create-shelf
+      summary: It creates a new shelf
+  '/shelves/{id}':
     summary: It retrieves the book
     get:
       tags:
-        - book
+        - shelf
       responses:
         '200':
-          $ref: '#/components/responses/res-200-book'
+          $ref: '#/components/responses/res-200-shelf'
         '401':
           $ref: '#/components/responses/res-401'
         '403':
@@ -62,28 +62,6 @@ paths:
         required: true
 components:
   schemas:
-    requestBookCreation:
-      title: Root Type for requestBookCreation
-      description: ''
-      type: object
-      properties:
-        owner:
-          type: object
-          properties:
-            id:
-              type: string
-      example:
-        owner:
-          id: 99eabea1-8dbd-437f-a706-a73162d5ba7b
-    bookCreated:
-      title: Root Type for bookCreated
-      description: ''
-      type: object
-      properties:
-        id:
-          type: string
-      example:
-        id: bfcf3d99-ec2d-4e86-9b1e-1b43c1cc7188
     error-401:
       title: error-401
       description: ''
@@ -144,7 +122,7 @@ components:
       example:
         code: PAY-500
         description: internal server error
-    book:
+    shelf:
       title: Root Type for book
       description: ''
       type: object
@@ -164,6 +142,28 @@ components:
         owner:
           id: 99eabea1-8dbd-437f-a706-a73162d5ba7b
         version: 10
+    shelfCreated:
+      title: Root Type for bookCreated
+      description: ''
+      type: object
+      properties:
+        id:
+          type: string
+      example:
+        id: bfcf3d99-ec2d-4e86-9b1e-1b43c1cc7188
+    requestShelfCreation:
+      title: Root Type for requestBookCreation
+      description: ''
+      type: object
+      properties:
+        owner:
+          type: object
+          properties:
+            id:
+              type: string
+      example:
+        owner:
+          id: 99eabea1-8dbd-437f-a706-a73162d5ba7b
   responses:
     res-500:
       content:
@@ -189,12 +189,6 @@ components:
           schema:
             $ref: '#/components/schemas/error-422'
       description: ''
-    res-200-book:
-      content:
-        application/json:
-          schema:
-            $ref: '#/components/schemas/book'
-      description: ''
     res-400:
       content:
         application/json: {}
@@ -203,7 +197,13 @@ components:
       content:
         application/json: {}
       description: ''
+    res-200-shelf:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/shelf'
+      description: ''
 tags:
   -
-    name: book
-    description: Book API
+    name: shelf
+    description: Shelf API
